SERVER-126242 Fix OpTimeObserverDispatcher::notify() perf regression (#53432)

GitOrigin-RevId: 8ec61aff045d715f566fdec1fe8adc6d9270072c